# TreeHealthDetection

./: .gitignore  README.md  detection_engine.py  engine.py  inference.py  inference_detection.py  inference_detection_model_list.csv  inference_segmentation.py  pyproject.toml  requirements.txt  segmentation_engine.py  train_engine_detection.py  train_engine_segmentation.py
Data/ProcessedImagesXMLs/: example_image_01.xml  example_image_02.xml
Detection/: CustomDataset.py  engine.py  evaluation_utils.py  models.py  transformations.py  utils.py
Inference/: inference.py
PreProcessing/: README.md  csv2xml.py  split_image.py  utils.py
Segmentation/: Custom3DSegmentationDataset.py  training_visualization.py  transformations.py  utils.py
Segmentation/Models/: UNet3D.py  UNet3DPreTrained.py
Visualization/: demo_visualization.ipynb  demo_visualization.py  training_output_visualization.py  visualization.py
