[tool.poetry]
name = "treehealthdetection"
version = "0.1.0"
description = ""
authors = ["Leonard Berger <leonard.berger@student.uni-tuebingen.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
albumentations = "1.3.1"
matplotlib = "3.7.1"
numpy = "1.24.3"
opencv-contrib-python = "4.8.0.74"
opencv-python = "4.7.0.72"
opencv-python-headless = "4.7.0.72"
pandas = "2.0.2"
pillow = "10.0.0"
protobuf = "4.23.4"
pydantic = "1.10.9"
rasterio = "1.3.7"
torch = "2.0.1"
torchmetrics = "1.0.1"
torchvision = "0.15.2"
tqdm = "4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
